# libwrc

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libwrc-wiki.ini  libwrc.ini  libwrc.pc.in  libwrc.spec.in  pyproject.toml.in  setup.cfg  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
include/: Makefile.am  libwrc.h.in
include/libwrc/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libwrc/: Makefile.am  libwrc.c  libwrc.rc.in  libwrc_codepage.h  libwrc_data_descriptor.c  libwrc_data_descriptor.h  libwrc_debug.c  libwrc_debug.h  libwrc_definitions.h.in  libwrc_error.c  libwrc_error.h  libwrc_extern.h  libwrc_io_handle.c  libwrc_io_handle.h  libwrc_language_entry.c  libwrc_language_entry.h  libwrc_language_table.c  libwrc_language_table.h  libwrc_libbfio.h  libwrc_libcdata.h  libwrc_libcerror.h  libwrc_libclocale.h  libwrc_libcnotify.h  libwrc_libcstring.h  libwrc_libfcache.h  libwrc_libfdata.h  libwrc_libfguid.h  libwrc_libfvalue.h  libwrc_libfwevt.h  libwrc_libfwnt.h  libwrc_libuna.h  libwrc_manifest.c  libwrc_manifest.h  libwrc_manifest_resource.c  libwrc_manifest_resource.h  libwrc_manifest_values.c  libwrc_manifest_values.h  libwrc_message_table.c  libwrc_message_table.h  libwrc_message_table_resource.c  (+71 more)
msvscpp/: Makefile.am  libwrc.sln
msvscpp/libwrc/: libwrc.vcproj
msvscpp/pywrc/: pywrc.vcproj
msvscpp/wrc_test_data_descriptor/: wrc_test_data_descriptor.vcproj
msvscpp/wrc_test_error/: wrc_test_error.vcproj
msvscpp/wrc_test_get_version/: wrc_test_get_version.vcproj
msvscpp/wrc_test_io_handle/: wrc_test_io_handle.vcproj
msvscpp/wrc_test_language_entry/: wrc_test_language_entry.vcproj
msvscpp/wrc_test_language_table/: wrc_test_language_table.vcproj
msvscpp/wrc_test_manifest_resource/: wrc_test_manifest_resource.vcproj
msvscpp/wrc_test_message-table_resource/: wrc_test_message-table_resource.vcproj
msvscpp/wrc_test_message_table_resource/: wrc_test_message_table_resource.vcproj
msvscpp/wrc_test_mui_resource/: wrc_test_mui_resource.vcproj
msvscpp/wrc_test_mui_values/: wrc_test_mui_values.vcproj
msvscpp/wrc_test_notify/: wrc_test_notify.vcproj
msvscpp/wrc_test_resource/: wrc_test_resource.vcproj
msvscpp/wrc_test_resource_item/: wrc_test_resource_item.vcproj
msvscpp/wrc_test_resource_node_entry/: wrc_test_resource_node_entry.vcproj
msvscpp/wrc_test_resource_node_header/: wrc_test_resource_node_header.vcproj
msvscpp/wrc_test_resource_values/: wrc_test_resource_values.vcproj
msvscpp/wrc_test_set_ascii_codepage/: wrc_test_set_ascii_codepage.vcproj
msvscpp/wrc_test_stream/: wrc_test_stream.vcproj
msvscpp/wrc_test_string_resource/: wrc_test_string_resource.vcproj
msvscpp/wrc_test_string_table_resource/: wrc_test_string_table_resource.vcproj
msvscpp/wrc_test_support/: wrc_test_support.vcproj
msvscpp/wrc_test_table_entry/: wrc_test_table_entry.vcproj
msvscpp/wrc_test_tools_info_handle/: wrc_test_tools_info_handle.vcproj
msvscpp/wrc_test_tools_output/: wrc_test_tools_output.vcproj
msvscpp/wrc_test_tools_signal/: wrc_test_tools_signal.vcproj
msvscpp/wrc_test_version_information_resource/: wrc_test_version_information_resource.vcproj
msvscpp/wrc_test_version_values/: wrc_test_version_values.vcproj
msvscpp/wrc_test_wevt_channel/: wrc_test_wevt_channel.vcproj
msvscpp/wrc_test_wevt_event/: wrc_test_wevt_event.vcproj
msvscpp/wrc_test_wevt_keyword/: wrc_test_wevt_keyword.vcproj
msvscpp/wrc_test_wevt_level/: wrc_test_wevt_level.vcproj
msvscpp/wrcinfo/: wrcinfo.vcproj
ossfuzz/: Makefile.am  manifest_resource_fuzzer.cc  message_table_resource_fuzzer.cc  mui_resource_fuzzer.cc  ossfuzz_libwrc.h  stream_fuzzer.cc  string_table_resource_fuzzer.cc  version_information_resource_fuzzer.cc
pywrc/: Makefile.am  pywrc.c  pywrc.h  pywrc_codepage.c  pywrc_codepage.h  pywrc_error.c  pywrc_error.h  pywrc_file_object_io_handle.c  pywrc_file_object_io_handle.h  pywrc_integer.c  pywrc_integer.h  pywrc_language_identifiers.c  pywrc_language_identifiers.h  pywrc_libbfio.h  pywrc_libcerror.h  pywrc_libclocale.h  pywrc_libcstring.h  pywrc_libwrc.h  pywrc_manifest.c  pywrc_manifest.h  pywrc_manifest_resource.c  pywrc_manifest_resource.h  pywrc_message_table.c  pywrc_message_table.h  pywrc_message_table_resource.c  pywrc_message_table_resource.h  pywrc_mui.c  pywrc_mui.h  pywrc_mui_resource.c  pywrc_mui_resource.h  pywrc_python.h  pywrc_resource.c  pywrc_resource.h  pywrc_resource_item.c  pywrc_resource_item.h  pywrc_resource_items.c  pywrc_resource_items.h  pywrc_resources.c  pywrc_resources.h  pywrc_stream.c  (+11 more)
tests/: Makefile.am  atlocal.in  pkgbuild.sh  pywrc_test_get_version.py  pywrc_test_manifest_resource.py  pywrc_test_message_table_resource.py  pywrc_test_mui_resource.py  pywrc_test_set_ascii_codepage.py  pywrc_test_stream.py  pywrc_test_string_table_resource.py  pywrc_test_support.py  pywrc_test_version_information_resource.py  runtests.py  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_python_functions.sh  test_python_module.at  test_python_module.sh  test_pywrc_set_ascii_codepage.sh  test_set_ascii_codepage.sh  test_tools.at  test_tools.ps1  test_wrcinfo.ps1  test_wrcinfo.sh  wrc_test_data_descriptor.c  wrc_test_error.c  wrc_test_functions.c  wrc_test_functions.h  wrc_test_get_version.c  wrc_test_getopt.c  wrc_test_getopt.h  wrc_test_io_handle.c  wrc_test_language_entry.c  wrc_test_language_table.c  (+42 more)
wrctools/: Makefile.am  info_handle.c  info_handle.h  wrcinfo  wrcinfo.c  wrcoutput.c  wrcoutput.h  wrctools_getopt.c  wrctools_getopt.h  wrctools_i18n.h  wrctools_libbfio.h  wrctools_libcerror.h  wrctools_libclocale.h  wrctools_libcnotify.h  wrctools_libcstring.h  wrctools_libcsystem.h  wrctools_libexe.h  wrctools_libfdatetime.h  wrctools_libfwnt.h  wrctools_libuna.h  wrctools_libwrc.h  wrctools_output.c  wrctools_output.h  wrctools_signal.c  wrctools_signal.h  wrctools_unused.h
(+33 files in other folders)
