include_HEADERS = \
	libwrc.h

pkginclude_HEADERS = \
	libwrc/codepage.h \
	libwrc/definitions.h \
	libwrc/error.h \
	libwrc/extern.h \
	libwrc/features.h \
	libwrc/types.h

EXTRA_DIST = \
	libwrc.h.in \
	libwrc/definitions.h.in \
	libwrc/features.h.in \
	libwrc/types.h.in

DISTCLEANFILES = \
	libwrc.h \
	libwrc/definitions.h \
	libwrc/features.h \
	libwrc/types.h \
	Makefile \
	Makefile.in

