MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pywrc/pywrc.vcproj \
	wrc_test_error/wrc_test_error.vcproj \
	wrc_test_notify/wrc_test_notify.vcproj \
	wrc_test_resource/wrc_test_resource.vcproj \
	wrc_test_stream/wrc_test_stream.vcproj \
	wrc_test_support/wrc_test_support.vcproj \
	wrcinfo/wrcinfo.vcproj \
	libwrc.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

