MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pywrc/pywrc.vcproj \
	wrc_test_data_descriptor/wrc_test_data_descriptor.vcproj \
	wrc_test_error/wrc_test_error.vcproj \
	wrc_test_io_handle/wrc_test_io_handle.vcproj \
	wrc_test_language_entry/wrc_test_language_entry.vcproj \
	wrc_test_language_table/wrc_test_language_table.vcproj \
	wrc_test_mui_values/wrc_test_mui_values.vcproj \
	wrc_test_notify/wrc_test_notify.vcproj \
	wrc_test_resource/wrc_test_resource.vcproj \
	wrc_test_resource_values/wrc_test_resource_values.vcproj \
	wrc_test_stream/wrc_test_stream.vcproj \
	wrc_test_support/wrc_test_support.vcproj \
	wrc_test_version_values/wrc_test_version_values.vcproj \
	wrc_test_wevt_channel/wrc_test_wevt_channel.vcproj \
	wrc_test_wevt_event/wrc_test_wevt_event.vcproj \
	wrc_test_wevt_keyword/wrc_test_wevt_keyword.vcproj \
	wrc_test_wevt_level/wrc_test_wevt_level.vcproj \
	wrc_test_wevt_map/wrc_test_wevt_map.vcproj \
	wrc_test_wevt_opcode/wrc_test_wevt_opcode.vcproj \
	wrc_test_wevt_provider/wrc_test_wevt_provider.vcproj \
	wrc_test_wevt_task/wrc_test_wevt_task.vcproj \
	wrc_test_wevt_template_definition/wrc_test_wevt_template_definition.vcproj \
	wrcinfo/wrcinfo.vcproj \
	libwrc.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

