MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libexe/libexe.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libwrc/libwrc.vcproj \
	pywrc/pywrc.vcproj \
	wrc_test_data_descriptor/wrc_test_data_descriptor.vcproj \
	wrc_test_error/wrc_test_error.vcproj \
	wrc_test_io_handle/wrc_test_io_handle.vcproj \
	wrc_test_language_entry/wrc_test_language_entry.vcproj \
	wrc_test_language_table/wrc_test_language_table.vcproj \
	wrc_test_manifest_resource/wrc_test_manifest_resource.vcproj \
	wrc_test_message_table_resource/wrc_test_message_table_resource.vcproj \
	wrc_test_mui_resource/wrc_test_mui_resource.vcproj \
	wrc_test_mui_values/wrc_test_mui_values.vcproj \
	wrc_test_notify/wrc_test_notify.vcproj \
	wrc_test_resource/wrc_test_resource.vcproj \
	wrc_test_resource_item/wrc_test_resource_item.vcproj \
	wrc_test_resource_node_entry/wrc_test_resource_node_entry.vcproj \
	wrc_test_resource_node_header/wrc_test_resource_node_header.vcproj \
	wrc_test_stream/wrc_test_stream.vcproj \
	wrc_test_string_table_resource/wrc_test_string_table_resource.vcproj \
	wrc_test_support/wrc_test_support.vcproj \
	wrc_test_table_entry/wrc_test_table_entry.vcproj \
	wrc_test_version_information_resource/wrc_test_version_information_resource.vcproj \
	wrc_test_version_values/wrc_test_version_values.vcproj \
	wrcinfo/wrcinfo.vcproj \
	libwrc.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

